test/classes/errors/nilability-return-yield/yield-owned.good
yield-owned.chpl:3: In iterator 'I':
yield-owned.chpl:3: error: cannot yield 'owned C?' when the declared return type is 'owned C'
